-------------------------- soilDB 0.5-6 (2012-04-16) ----------------------------
* adding preimlinary functions for querying component data from local NASIS
* fixed minor bug in SDA_query() and added some links to related documentation

-------------------------- soilDB 0.5-1 (2012-02-22) ----------------------------
* fetchNASIS() and fetchPedonPC() now integrate `extended' data
* warning and error messages cleaned-up
* multiple textures no longer cause duplicate HZ rows (NASIS only)
* exteded queries now split frags/para-frags
* silt fraction is estimated from 100-(sand+clay) when possible
* added local NASIS ODBC connection vignette (thanks JMS)
* removed dsn argument from NASIS functions as it should always be 'nasis_local'
* new wide-formatted, boolean representation of diagnostic horizon data
* queries standardized between NASIS/PedonPC
* new fetchNASIS() function for 1-line access to local NASIS data
* new sample data set 'loafercreek'
* basic vignette added, switching to knitr-style vignettes

-------------------------- soilDB 0.3-3 (2012-01-10) --------------------------
* SDA_query() now functional on MacOS/UNIX-like OSes with (SSOAP 0.8-1, XMLSchema 0.6-0, and XML 3.7-1)
  - thanks to D.T. Lang for the updates!
* moving hard to find packages to 'suggested' status: SSOAP, RCurl, XML, rgdal
* new wrapper function fetchPedonPC() for typical site/pedon/hz queries
* new function getHzErrorsPedonPC() for ID-ing pedons with problem horizonation
* NOTE: hz data queries will return 2 rows/hz (error) when multiple texture 
  classes are assigned to a single horizon- this is a bug, not a feature!

-------------------------- soilDB 0.3-2 (2011-12-30) --------------------------
* NASIS/pedonPC queries synced
* minor bug fixes and documentation updates
* updated query structure, switching over to native NASIS/PedonPC IDs
* extended summaries added: NASIS only

-------------------------- soilDB 0.2 (2011-12-27) --------------------------