@@ -8,71 +8,6 @@
 \author{J.M. Skovlin and D.E. Beaudette}
 \references{}
 \keyword{package}
-\seealso{\code{\link{fetchPedonPC}}}
-\examples{
-\dontrun{
-##
-## PedonPC Examples
-##
-
-# 1. load data in pieces
-dsn <- "S:/Service_Center/NRCS/pedon/pedon.mdb"
-site_data <- get_site_data_from_pedon_db(dsn)
-hz_data <- get_hz_data_from_pedon_db(dsn)
-color_data <- get_colors_from_pedon_db(dsn)
-
-# 2. join pieces
-# horizon + hz color: all horizons
-h <- join(hz_data, color_data, by='phiid', type='left')
-
-# (hz + color) + site: only those with horizon data
-f <- join(h, site_data, by='peiid', type='inner')
+\seealso{\code{\link{fetchPedonPC}, \link{fetchNASIS}, \link{SDA_query}, \link{loafercreek}}}
 
 
-# 3. fix some common problems
-# replace missing lower boundaries
-f$hzdepb[!is.na(f$hzdept) & is.na(f$hzdepb)] <- f$hzdept[!is.na(f$hzdept) & is.na(f$hzdepb)]
-
-# test for bad horizonation... flag, and remove
-f.test <- ddply(f, .(pedon_id), test_hz_logic, topcol='hzdept', bottomcol='hzdepb', strict=TRUE)
-
-# which are the good (valid) ones?
-good.pedon.ids <- as.character(f.test$pedon_id[which(f.test$hz_logic_pass == TRUE)])
-
-# keep the good ones
-f <- subset(f, pedon_id \%in\% good.pedon.ids)
-
-# 4. upgrade to SoilProfilecollection
-depths(f) <- pedon_id ~ hzdept + hzdepb
-
-# move site data into @site
-site(f) <- ~ sampled_as + correlated_as + hillslope_pos + x + y + datum + elev + slope + aspect + plantassocnm + bedrckdepth + bedrock_kind + describer + psctopdepth + pscbotdepth + part_size_class
-
-# 5. convert colors... in the presence of missing color data
-f$soil_color <- rep(NA, times=nrow(horizons(f)))
-idx <- complete.cases(f$m_r)
-f$soil_color[idx] <- with(horizons(f)[idx, ], rgb(m_r, m_g, m_b)) # moist colors
-
-
-##
-## NASIS examples
-##
-## these depend on the user setting up a new DSN within the ODBC Data Sources Control Panel
-## and naming it 'nasis_local'
-## see attached vignette 'setup_ODBC_local_NASIS'
-##
-
-# 1. fetch data from Local NASIS DB
-site_data <- get_site_data_from_NASIS_db()
-hz_data <- get_hz_data_from_NASIS_db()
-color_data <- get_colors_from_NASIS_db()
-
-# 2. join data into single object
-h <- join(hz_data, color_data, by='phiid', type='left')
-f <- join(h, site_data, by='peiid', type='inner')
-
-# see pedonPC examples for further processing
-
-
-}	
-}
